--- a/src/chart.css
+++ b/src/chart.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 @font-face {
   font-family: LeagueMono;
   src: url(../resources/fonts/LeagueMono-BoldNormal.otf);
@@ -24,13 +28,15 @@
 
 
 #chart {
-
+    /* background: rgba(11,11,11,11); */
 }
 
 .apexcharts-datalabel {
-    font-weight: bold;
-    font-size: 120%;
+    font-weight: normal;
+    color: #fff;
+    font-size: 14px;
     text-rendering: geometricPrecision;
+    letter-spacing: 2px;
 }
 .xAxisCSS {
     font-weight: bold;
@@ -38,4 +44,40 @@
 
 .yAxisCSS {
     font-weight: normal;
+}
+
+.errorWrapper {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+.centreonLogo {
+    display: inline-block;
+    margin: 2% auto;
+}
+
+.warningMessage {
+    display: block;
+    font-family: jost;
+}
+
+.errorMessage {
+    display: block;
+    font-family: jost;
+}
+
+.fontWarningIcon {
+    display: block;
+    color: #FEB019;
+}
+
+.fontErrorIcon {
+    display: block;
+    color: #FF4560;
+}
+
+.fa {
+    margin-top:5%;
+    font-size: 5em;
 }
